@startuml
    skinparam Shadowing false

    class URTS_GPT.UI.EdgePanMenu{

        - edgePanToggle : Toggle
        - rtsCamera : RtsCamera
        - PrefKey : string <<constant>>

        + Awake() : void
        + Start() : void
        + OnDestroy() : void
        + OnToggleChanged() : void
    }

    class Toggle
    class RtsCamera

    URTS_GPT.UI.EdgePanMenu --> Toggle
    URTS_GPT.UI.EdgePanMenu --> RtsCamera

@enduml